# swagger-output.json
@@ -429,6 +429,22 @@
         }
       }
     },
+    "/organizers": {
+      "post": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/tickets/{uid}/{id}": {
       "post": {
         "description": "",
